# MyLabs

./: .env.example  .gitignore  README.md  alembic.ini  database.py  pyproject.toml  pyrightconfig.json  requirements-lock.txt  requirements.txt  settings.py  setup_repo.ps1  setup_repo.sh
alembic/: env.py
data/csv_files/: people.csv
data/excel/: Google_Stock_Market_Data.xlsx  customers.csv  employees.csv  exam_data.csv  hospital_appointments_dirty.csv  hospital_doctors_dirty.xlsx  hospital_patients_dirty.csv  invoices.csv  invoices_line.csv  people.csv  people_city_sample.csv  students.csv  students.xlsx  users.csv  usuarios_dirty.csv
data/export/: customers_copy.csv  students_table.html
data/json/: hospital_billing_dirty.json  students_profile.yaml  students_records.json  students_records.jsonl
data/sql/: school_seed.sql
data/sql_files/: school_schema.sql
data/text/: test.txt
data/text_files/: student.txt
labs/ITSE-1003/: Coffee_sales.py  README.md  buggy.py  buggy_fixed.py  build_school_db.py  config.py  csv_crud_people.py  debugging-version.py  dic.py  dic_countries.py  dic_vehicles.py  example1.py  example2.py  instructions.txt  lab2_csv_manipulation.py  lab2_csv_manipulation_pandas.py  lab2_csv_manipulation_rich.py  lab2_preview.py  matplotlib.ipynb  mcts_tic_tac_toe.py  models_music.py  music_database.py  panda_live_demo.py  panda_live_demo_step.ipynb  panda_live_demo_step.py  pet_management_system.py  query_music_database.py  seed_music_database.py  week3_companies_lab3.py  week3_students_week3_lab.py
labs/classes/: README.md  basic_oop.py  (+3 more)
(+445 files in other folders)
